include/libsettings/settings.h

/**
 * @struct  settings_t
 *
 * @brief   Opaque context for settings.
 */
typedef struct settings_s settings_t;
/**
 * @brief   Standard settings type definitions.
 */
enum {
  SETTINGS_TYPE_INT,    /**< Integer. 8, 16, or 32 bits.                   */
  SETTINGS_TYPE_FLOAT,  /**< Float. Single or double precision.            */
  SETTINGS_TYPE_STRING, /**< String.                                       */
  SETTINGS_TYPE_BOOL    /**< Boolean.                                      */
};
/**
 * @brief Settings register error codes
 */
typedef enum settings_reg_res_e {
  SETTINGS_REG_OK = 0,      /**< Setting registered, requested value used */
  SETTINGS_REG_OK_PERM = 1, /**< Setting registered, permanent storage value found and returned */
  SETTINGS_REG_REGISTERED = 2,   /**< Setting is already registered, value from memory returned */
  SETTINGS_REG_PARSE_FAILED = 3, /**< Could not parse setting */
} settings_reg_res_t;
/**
 * @brief Settings write error codes
 */
typedef enum settings_write_res_e {
  SETTINGS_WR_OK = 0,               /**< Setting written               */
  SETTINGS_WR_VALUE_REJECTED = 1,   /**< Setting value invalid   */
  SETTINGS_WR_SETTING_REJECTED = 2, /**< Setting does not exist */
  SETTINGS_WR_PARSE_FAILED = 3,     /**< Could not parse setting value */
  /* READ_ONLY:MODIFY_DISABLED ~= Permanent:Temporary */
  SETTINGS_WR_READ_ONLY = 4,       /**< Setting is read only          */
  SETTINGS_WR_MODIFY_DISABLED = 5, /**< Setting is not modifiable     */
  SETTINGS_WR_SERVICE_FAILED = 6,  /**< System failure during setting */
  SETTINGS_WR_TIMEOUT = 7,         /**< Request wasn't replied in time */
} settings_write_res_t;
typedef int (*settings_send_t)(void *ctx, uint16_t msg_type, uint8_t len, uint8_t *payload);
typedef int (*settings_send_from_t)(void *ctx,
                                    uint16_t msg_type,
                                    uint8_t len,
                                    uint8_t *payload,
                                    uint16_t sbp_sender_id);
typedef int (*settings_wait_init_t)(void *ctx);
typedef int (*settings_wait_t)(void *ctx, int timeout_ms);
typedef int (*settings_wait_deinit_t)(void *ctx);
typedef void (*settings_signal_t)(void *ctx);
typedef int (*settings_reg_cb_t)(void *ctx,
                                 uint16_t msg_type,
                                 sbp_msg_callback_t cb,
                                 void *cb_context,
                                 sbp_msg_callbacks_node_t **node);
typedef int (*settings_unreg_cb_t)(void *ctx, sbp_msg_callbacks_node_t **node);
typedef void (*settings_log_t)(int priority, const char *format, ...);
typedef struct settings_api_s {
  void *ctx;
  settings_send_t send;
  settings_send_from_t send_from;
  settings_wait_init_t wait_init; /* Optional, needed if wait uses semaphores etc */
  settings_wait_t wait;
  settings_wait_deinit_t wait_deinit; /* Optional, needed if wait uses semaphores etc */
  settings_signal_t signal;
  settings_reg_cb_t register_cb;
  settings_unreg_cb_t unregister_cb;
  settings_log_t log;
  bool log_preformat;
} settings_api_t;
/**
 * @brief   Settings notify callback.
 * @details Signature of a user-provided callback function to be executed
 *          after a setting value is updated.
 *
 * @note    The setting value will be updated _before_ the callback is executed.
 *          If the callback returns an error, the setting value will be
 *          reverted to the previous value.
 *
 * @param[in] context       Pointer to the user-provided context.
 *
 * @return                  The operation result.
 * @retval 0                Success. The updated setting value is acceptable.
 * @retval -1               The updated setting value should be reverted.
 */
typedef int (*settings_notify_fn)(void *context);
/**
 * @brief   Create a settings context.
 * @details Create and initialize a settings context.
 *
 * @return                  Pointer to the created context, or NULL if the
 *                          operation failed.
 */
LIBSETTINGS_DECLSPEC settings_t *settings_create(uint16_t sender_id, settings_api_t *api_impl);
/**
 * @brief   Destroy a settings context.
 * @details Deinitialize and destroy a settings context.
 *
 * @note    The context pointer will be set to NULL by this function.
 *
 * @param[inout] ctx        Double pointer to the context to destroy.
 */
LIBSETTINGS_DECLSPEC void settings_destroy(settings_t **ctx);