rust/libsettings_wrapper.h

typedef uint8_t _u8;
typedef uint16_t _u16;
#define u8 _u8
#define u16 _u16
#define bool _Bool