rust/libsettings-sys/src/bindings.rs

#[doc = " @struct  settings_t"]
#[doc = ""]
#[doc = " @brief   Opaque context for settings."]
pub type settings_t = settings_s;
#[doc = "< Integer. 8, 16, or 32 bits."]
pub const SETTINGS_TYPE_INT: ::std::os::raw::c_uint = 0;
#[doc = "< Float. Single or double precision."]
pub const SETTINGS_TYPE_FLOAT: ::std::os::raw::c_uint = 1;
#[doc = "< String."]
pub const SETTINGS_TYPE_STRING: ::std::os::raw::c_uint = 2;
#[doc = "< Boolean."]
pub const SETTINGS_TYPE_BOOL: ::std::os::raw::c_uint = 3;
#[doc = " @brief   Standard settings type definitions."]
pub type _bindgen_ty_1 = ::std::os::raw::c_uint;
#[doc = "< Setting registered, requested value used"]
pub const settings_reg_res_e_SETTINGS_REG_OK: settings_reg_res_e = 0;
pub const settings_reg_res_e_SETTINGS_REG_OK_PERM: settings_reg_res_e = 1;
pub const settings_reg_res_e_SETTINGS_REG_REGISTERED: settings_reg_res_e = 2;
#[doc = "< Could not parse setting"]
pub const settings_reg_res_e_SETTINGS_REG_PARSE_FAILED: settings_reg_res_e = 3;
#[doc = " @brief Settings register error codes"]
pub type settings_reg_res_e = ::std::os::raw::c_uint;
#[doc = " @brief Settings register error codes"]
pub use self::settings_reg_res_e as settings_reg_res_t;
#[doc = "< Setting written"]
pub const settings_write_res_e_SETTINGS_WR_OK: settings_write_res_e = 0;
#[doc = "< Setting value invalid"]
pub const settings_write_res_e_SETTINGS_WR_VALUE_REJECTED: settings_write_res_e = 1;
#[doc = "< Setting does not exist"]
pub const settings_write_res_e_SETTINGS_WR_SETTING_REJECTED: settings_write_res_e = 2;
#[doc = "< Could not parse setting value"]
pub const settings_write_res_e_SETTINGS_WR_PARSE_FAILED: settings_write_res_e = 3;
#[doc = "< Setting is read only"]
pub const settings_write_res_e_SETTINGS_WR_READ_ONLY: settings_write_res_e = 4;
#[doc = "< Setting is not modifiable"]
pub const settings_write_res_e_SETTINGS_WR_MODIFY_DISABLED: settings_write_res_e = 5;
#[doc = "< System failure during setting"]
pub const settings_write_res_e_SETTINGS_WR_SERVICE_FAILED: settings_write_res_e = 6;
#[doc = "< Request wasn't replied in time"]
pub const settings_write_res_e_SETTINGS_WR_TIMEOUT: settings_write_res_e = 7;
#[doc = " @brief Settings write error codes"]
pub type settings_write_res_e = ::std::os::raw::c_uint;
#[doc = " @brief Settings write error codes"]
pub use self::settings_write_res_e as settings_write_res_t;
pub type settings_send_t = ::std::option::Option<
    unsafe extern "C" fn(
        ctx: *mut ::std::os::raw::c_void,
        msg_type: u16,
        len: u8,
        payload: *mut u8,
    ) -> ::std::os::raw::c_int,
>;
pub type settings_send_from_t = ::std::option::Option<
    unsafe extern "C" fn(
        ctx: *mut ::std::os::raw::c_void,
        msg_type: u16,
        len: u8,
        payload: *mut u8,
        sbp_sender_id: u16,
    ) -> ::std::os::raw::c_int,
>;
pub type settings_wait_init_t = ::std::option::Option<
    unsafe extern "C" fn(ctx: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int,
>;
pub type settings_wait_t = ::std::option::Option<
    unsafe extern "C" fn(
        ctx: *mut ::std::os::raw::c_void,
        timeout_ms: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int,
>;
pub type settings_wait_deinit_t = ::std::option::Option<
    unsafe extern "C" fn(ctx: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int,
>;
pub type settings_signal_t =
    ::std::option::Option<unsafe extern "C" fn(ctx: *mut ::std::os::raw::c_void)>;
pub type settings_wait_thd_t = ::std::option::Option<
    unsafe extern "C" fn(
        event: *mut ::std::os::raw::c_void,
        timeout_ms: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int,
>;
pub type settings_signal_thd_t =
    ::std::option::Option<unsafe extern "C" fn(event: *mut ::std::os::raw::c_void)>;
pub type settings_lock_t =
    ::std::option::Option<unsafe extern "C" fn(ctx: *mut ::std::os::raw::c_void)>;
pub type settings_unlock_t =
    ::std::option::Option<unsafe extern "C" fn(ctx: *mut ::std::os::raw::c_void)>;
pub type settings_reg_cb_t = ::std::option::Option<
    unsafe extern "C" fn(
        ctx: *mut ::std::os::raw::c_void,
        msg_type: u16,
        cb: sbp_msg_callback_t,
        cb_context: *mut ::std::os::raw::c_void,
        node: *mut *mut sbp_msg_callbacks_node_t,
    ) -> ::std::os::raw::c_int,
>;
pub type settings_unreg_cb_t = ::std::option::Option<
    unsafe extern "C" fn(
        ctx: *mut ::std::os::raw::c_void,
        node: *mut *mut sbp_msg_callbacks_node_t,
    ) -> ::std::os::raw::c_int,
>;
pub type settings_log_t = ::std::option::Option<
    unsafe extern "C" fn(
        priority: ::std::os::raw::c_int,
        format: *const ::std::os::raw::c_char,
        ...
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct settings_api_s {
    pub ctx: *mut ::std::os::raw::c_void,
    pub send: settings_send_t,
    pub send_from: settings_send_from_t,
    pub wait_init: settings_wait_init_t,
    pub wait: settings_wait_t,
    pub wait_deinit: settings_wait_deinit_t,
    pub signal: settings_signal_t,
    pub wait_thd: settings_wait_t,
    pub signal_thd: settings_signal_t,
    pub lock: settings_lock_t,
    pub unlock: settings_unlock_t,
    pub register_cb: settings_reg_cb_t,
    pub unregister_cb: settings_unreg_cb_t,
    pub log: settings_log_t,
    pub log_preformat: bool,
}
#[test]
fn bindgen_test_layout_settings_api_s() {
    assert_eq!(
        ::std::mem::size_of::<settings_api_s>(),
        120usize,
        concat!("Size of: ", stringify!(settings_api_s))
    );
    assert_eq!(
        ::std::mem::align_of::<settings_api_s>(),
        8usize,
        concat!("Alignment of ", stringify!(settings_api_s))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<settings_api_s>())).ctx as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(settings_api_s),
            "::",
            stringify!(ctx)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<settings_api_s>())).send as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(settings_api_s),
            "::",
            stringify!(send)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<settings_api_s>())).send_from as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(settings_api_s),
            "::",
            stringify!(send_from)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<settings_api_s>())).wait_init as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(settings_api_s),
            "::",
            stringify!(wait_init)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<settings_api_s>())).wait as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(settings_api_s),
            "::",
            stringify!(wait)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<settings_api_s>())).wait_deinit as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(settings_api_s),
            "::",
            stringify!(wait_deinit)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<settings_api_s>())).signal as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(settings_api_s),
            "::",
            stringify!(signal)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<settings_api_s>())).wait_thd as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(settings_api_s),
            "::",
            stringify!(wait_thd)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<settings_api_s>())).signal_thd as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(settings_api_s),
            "::",
            stringify!(signal_thd)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<settings_api_s>())).lock as *const _ as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(settings_api_s),
            "::",
            stringify!(lock)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<settings_api_s>())).unlock as *const _ as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(settings_api_s),
            "::",
            stringify!(unlock)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<settings_api_s>())).register_cb as *const _ as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(settings_api_s),
            "::",
            stringify!(register_cb)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<settings_api_s>())).unregister_cb as *const _ as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(settings_api_s),
            "::",
            stringify!(unregister_cb)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<settings_api_s>())).log as *const _ as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(settings_api_s),
            "::",
            stringify!(log)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<settings_api_s>())).log_preformat as *const _ as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(settings_api_s),
            "::",
            stringify!(log_preformat)
        )
    );
}
pub type settings_api_t = settings_api_s;
#[doc = " @brief   Settings notify callback."]
#[doc = " @details Signature of a user-provided callback function to be executed"]
#[doc = "          after a setting value is updated."]
#[doc = ""]
#[doc = " @note    The setting value will be updated _before_ the callback is executed."]
#[doc = "          If the callback returns an error, the setting value will be"]
#[doc = "          reverted to the previous value."]
#[doc = ""]
#[doc = " @param[in] context       Pointer to the user-provided context."]
#[doc = ""]
#[doc = " @return                  The operation result."]
#[doc = " @retval 0                Success. The updated setting value is acceptable."]
#[doc = " @retval -1               The updated setting value should be reverted."]
pub type settings_notify_fn = ::std::option::Option<
    unsafe extern "C" fn(context: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int,
>;
extern "C" {
    #[doc = " @brief   Create a settings context."]
    #[doc = " @details Create and initialize a settings context."]
    #[doc = ""]
    #[doc = " @return                  Pointer to the created context, or NULL if the"]
    #[doc = "                          operation failed."]
    pub fn settings_create(sender_id: u16, api_impl: *mut settings_api_t) -> *mut settings_t;
}
extern "C" {
    #[doc = " @brief   Destroy a settings context."]
    #[doc = " @details Deinitialize and destroy a settings context."]
    #[doc = ""]
    #[doc = " @note    The context pointer will be set to NULL by this function."]
    #[doc = ""]
    #[doc = " @param[inout] ctx        Double pointer to the context to destroy."]
    pub fn settings_destroy(ctx: *mut *mut settings_t);
}
